fixedUserDetailslmp, jwt and auth